Added keepAlive using Java-Websockets-provided Ping/Pong.  Fixed client handling of onClose to dispose/unregister remote service.